--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "babel-preset-stage-1": "^6.22.0",
     "css-loader": "^0.26.1",
     "file-loader": "^0.9.0",
+    "http-server": "^0.9.0",
+    "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.14.0"
+    "webpack": "^1.13.3"
   }
 }
